[gd_scene load_steps=3 format=3 uid="uid://bao8a625celm"]

[ext_resource type="Script" path="res://scripts/bidding_screen.gd" id="1_y7jm4"]
[ext_resource type="FontFile" uid="uid://cxxfk50w5chw3" path="res://assets/font/Pixeboy-z8XGD.ttf" id="2_wvs4e"]

[node name="biddingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y7jm4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -6.0
offset_right = 1253.0
offset_bottom = 832.0
scale = Vector2(1.06696, 1.04576)
color = Color(0, 0, 0, 0.780392)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = -9.37242
offset_top = 164.474
offset_right = 1269.63
offset_bottom = 318.474
theme_override_fonts/font = ExtResource("2_wvs4e")
theme_override_font_sizes/font_size = 75
text = "Whats your bid?"
horizontal_alignment = 1

[node name="right" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 692.622
offset_top = 237.803
offset_right = 754.622
offset_bottom = 290.803
theme_override_fonts/font = ExtResource("2_wvs4e")
theme_override_font_sizes/font_size = 60
text = ">"

[node name="left" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 484.555
offset_top = 236.847
offset_right = 546.555
offset_bottom = 289.847
theme_override_fonts/font = ExtResource("2_wvs4e")
theme_override_font_sizes/font_size = 60
text = "<"

[node name="bidNum" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 585.777
offset_top = 223.46
offset_right = 655.777
offset_bottom = 306.46
theme_override_fonts/font = ExtResource("2_wvs4e")
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="subBid" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 521.107
offset_top = 303.129
offset_right = 731.107
offset_bottom = 386.129
theme_override_fonts/font = ExtResource("2_wvs4e")
theme_override_font_sizes/font_size = 40
text = "Submit bid"

[node name="pass" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 548.287
offset_top = 409.272
offset_right = 705.287
offset_bottom = 472.272
theme_override_fonts/font = ExtResource("2_wvs4e")
theme_override_font_sizes/font_size = 40
text = "Pass"

[connection signal="pressed" from="ColorRect/right" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/left" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/subBid" to="." method="_on_sub_bid_pressed"]
[connection signal="pressed" from="ColorRect/pass" to="." method="_on_pass_pressed"]
